# vu-minh-duc-graphrag-chatbot

./: .env.example  .gitignore  README.md  REVIEW_DOCUMENT.md  docker-compose.yml  models.json  verify_system.py
.claude/: settings.local.json
.github/workflows/: test.yml
knowledge/: schema.cypher
n8n/workflows/: exported_all.json  followup_drip_campaign.json  messenger_webhook.json  response_sender.json  zalo_token_refresh.json
n8n/workflows/migrations/: 001_followup_queue.sql
python/: Dockerfile  pyproject.toml  requirements.txt
python/app/: config.py  main.py
python/app/routers/: chat.py  health.py  webhook.py
python/app/services/: ai_brain.py  debouncer.py  embedding_service.py  init_db.py  key_info_extractor.py  lead_extractor.py  logging_config.py  messenger_api.py  neo4j_client.py  rate_limiter.py  redis_client.py  response_splitter.py  retry_utils.py  smart_extractor.py  telegram_notifier.py  zalo_api.py
tests/: comprehensive_test.py  conftest.py  final_test.py  full_verification.py  unit_tests.py
tests/features/: __init__.py  test_all_features.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_lead_extractor.py  test_rate_limiter.py  test_redis_client.py  test_response_splitter.py  test_smart_extractor.py
